WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31209
V8DOMWindowCustom.cpp is missing WEB_SOCKETS guard on include
https://bugs.webkit.org/show_bug.cgi?id=31209
Summary
V8DOMWindowCustom.cpp is missing WEB_SOCKETS guard on include
Steve Block
Reported
2009-11-06 10:58:43 PST
V8DOMWindowCustom.cpp is missing WEB_SOCKETS feature guard on include of WebSockets.h. All other include sites of WebSockets.h from outside of websockets code use this guard.
Attachments
Patch 1 for Bug 31209
(1.16 KB, patch)
2009-11-06 11:05 PST
,
Steve Block
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2009-11-06 11:05:25 PST
Created
attachment 42660
[details]
Patch 1 for
Bug 31209
Eric Seidel (no email)
Comment 2
2009-11-06 11:23:33 PST
Comment on
attachment 42660
[details]
Patch 1 for
Bug 31209
LGTM.
Eric Seidel (no email)
Comment 3
2009-11-06 11:23:57 PST
Comment on
attachment 42660
[details]
Patch 1 for
Bug 31209
Build fixes don't require review, but review is always nice for any patch. :)
WebKit Commit Bot
Comment 4
2009-11-06 11:38:35 PST
Comment on
attachment 42660
[details]
Patch 1 for
Bug 31209
Rejecting patch 42660 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11573 test cases. transitions/transition-end-event-transform.html -> failed Exiting early after 1 failures. 11507 tests run. 484.99s total testing time 11506 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 6 test cases (<1%) had stderr output
Eric Seidel (no email)
Comment 5
2009-11-06 11:43:31 PST
Comment on
attachment 42660
[details]
Patch 1 for
Bug 31209
Must be a flakey test. I'll file a bug.
Eric Seidel (no email)
Comment 6
2009-11-06 11:44:49 PST
Turns out this was a known issue. Updated
bug 30029
.
WebKit Commit Bot
Comment 7
2009-11-06 12:01:24 PST
Comment on
attachment 42660
[details]
Patch 1 for
Bug 31209
Clearing flags on attachment: 42660 Committed
r50603
: <
http://trac.webkit.org/changeset/50603
>
WebKit Commit Bot
Comment 8
2009-11-06 12:01:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug