Update Android build to remove websockets include and to keep in line with latest WebKit.

See https://bugs.webkit.org/show_bug.cgi?id=31209

Change-Id: Ie79b5599ee9d6a87f02eea7148f2660b0aaafd9d