WebCore/bindings/v8/custom/V8DOMWindowCustom.cpp
@@ -56,7 +56,9 @@
 #include "Settings.h"
 #include "SharedWorkerRepository.h"
 #include "Storage.h"
+#if ENABLE(WEB_SOCKETS)
 #include "WebSocket.h"
+#endif
 #include "WindowFeatures.h"
 
 // Horizontal and vertical offset, from the parent content area, around newly
